Fixed crash in webkitAddKey() when key parameter is null. https://bugs.webkit.org/show_bug.cgi?id=85444

Patch by David Dorwin <ddorwin@chromium.org> on 2012-07-23
Reviewed by Kentaro Hara.

Reference: Step 1 of http://dvcs.w3.org/hg/html-media/raw-file/5f76a0b43836/encrypted-media/encrypted-media.html#dom-addkey

Source/WebCore:

Tests: media/encrypted-media/encrypted-media-syntax.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::webkitAddKey):

LayoutTests:

* media/encrypted-media/encrypted-media-syntax-expected.txt:
* media/encrypted-media/encrypted-media-syntax.html:

git-svn-id: svn://svn.chromium.org/blink/trunk@123409 bbb929c8-8fbe-4397-9dbb-9b2b20218538