third_party/WebKit/Source/WebCore/html/HTMLMediaElement.cpp
@@ -2558,6 +2558,11 @@ void HTMLMediaElement::webkitAddKey(const String& keySystem, PassRefPtr<Uint8Arr
         return;
     }
 
+    if (!key) {
+        ec = SYNTAX_ERR;
+        return;
+    }
+
     if (!key->length()) {
         ec = TYPE_MISMATCH_ERR;
         return;
